[Upgraded] v2.0 stable algorithm version